# allsum

./: .gitattributes  .gitignore  Cargo.toml  README.MD  TODO.MD  file  index.html  package.json  pnpm-lock.yaml  splashscreen.html  tauri.conf.json  test  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: essentials.yml  full.yml
src/: algorithms.rs  assets.css  file.rs  index.html  main.rs  main.ts  modules.js  modules.ts  scripts.js  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/source/: inkscape.icns
src-tauri/src/: algorithms.rs  features.rs  file.rs  main.rs
src/originals/: assets.css  assets.css.map  assets.scss
ui/: assets.css  index.html  modules.js  scripts.js  style.css
website/: index.html  style.css
