[package]
name = "allsum"
version = "0.1.3"
description = "A Tauri App"
authors = ["sbritorodr"]
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["dialog-open", "fs-read-file", "os-all", "shell-open"] }
# Custom dependencies
wasm-typescript-definition = "0.1.4"
wasm-bindgen = "0.2.83"

## Hashes: (Don't forget to add the name in ../src/features.rs)
md5 = "0.7.0" # MIT
sha-1 = "0.10.0" # MT
sha2 = "0.10.2" # MIT
blake3 = { version ="1.3.1", optional = true } # CCO or APACHE2
crc32fast = "1.3.2" # MIT
whirlpool = { version ="0.10.1", optional = true } # MIT 
belt-hash = {version = "0.1.0", optional = true} # MIT or APACHE2
tiger = {version = "0.2.1", optional = true} # MIT or APACHE2
shabal = {version = "0.4.1", optional = true} # MIT or APACHE2
blake2 = {version = "0.10.4", optional = true} # MIT or APACHE2
fsb = {version = "0.1.3", optional= true} # MIT or APACHE2


[dependencies.tauri-plugin-fs-extra]
git = "https://github.com/tauri-apps/tauri-plugin-fs-extra"

[features]
full = ["dep:blake3", "dep:whirlpool", "dep:belt-hash", "dep:tiger", "dep:shabal", "dep:blake2", "dep:fsb"] # enables full version (all checksums enabled)
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
